fix(style): scrollbar removed and mobile height fixed

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@
           font-family: 'Roboto', sans-serif;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   background-color: #111;
   color: #FFF;
