--- a/src/components/FeaturedMovie/style.css
+++ b/src/components/FeaturedMovie/style.css
@@ -92,6 +92,10 @@
 }
 
 @media (max-width: 760px) {
+    .featured {
+        height: 90vh;
+    }
+
     .featured--name {
         font-size: 40px;
     }
